@@ -12,6 +12,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       TRQ-897. (backported from 4.0.2)
   e - Allow pbs_mom to change users group on stderr/stdout files. Enabled by configuring
       Torque with CFLAGS='-DRESETGROUP'. TRQ-908. (backported from 4.0.2)
+  b - Fix so gpu count gets written out to server nodes file when using
+      --enable-nvidia-gpus. TRQ-927. (backported from 4.0.2)
      
 
 2.5.11
